# bibrs

./: ._README.md  .gitignore  CLAUDE.md  Cargo.toml  README.md  config.ini  projeto_bibrs.md
crates/bibrs-core/: Cargo.toml
crates/bibrs-core/src/: config.rs  lib.rs  model.rs
crates/bibrs-core/tests/: encoding.rs  real_file.rs  recovery.rs  roundtrip.rs
crates/bibrs-core/tests/fixtures/: sample.bib
crates/bibrs-normalize/: Cargo.toml
crates/bibrs-normalize/src/: citekey.rs  dedup.rs  fields.rs  lib.rs  names.rs
crates/bibrs-normalize/tests/: real_normalize.rs
crates/bibrs-sources/: Cargo.toml
crates/bibrs-sources/src/: cache.rs  crossref.rs  google_books.rs  lib.rs  openalex.rs  openlibrary.rs  source.rs
crates/bibrs-sources/tests/: api_mock.rs
crates/bibrs-sources/tests/fixtures/api/: crossref_work.json  openalex_works.json
src/: encoding.rs  error.rs  lib.rs  main.rs  model.rs  parser.rs  serializer.rs
tests/: bib2.bib  encoding.rs  recovery.rs  roundtrip.rs
