[workspace]
members = ["crates/bibrs-core", "crates/bibrs-normalize", "crates/bibrs-sources"]
resolver = "2"

[package]
name = "bibrs"
version = "0.1.0"
edition = "2021"

[dependencies]
bibrs-core = { path = "crates/bibrs-core" }
bibrs-normalize = { path = "crates/bibrs-normalize" }
bibrs-sources = { path = "crates/bibrs-sources" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
