[package]
name = "bibrs-core"
version = "0.1.0"
edition = "2021"

[dependencies]
indexmap = { version = "2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
encoding_rs = "0.8"
chardetng = "0.1"
unicode-normalization = "0.1"
nom = "8"
rust-ini = "0.21"
dirs = "6"
