[package]
name = "bibrs-sources"
version = "0.1.0"
edition = "2021"

[features]
integration = []

[dependencies]
bibrs-core = { path = "../bibrs-core" }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
dirs = "6"
sha2 = "0.10"
indexmap = "2"

[dev-dependencies]
wiremock = "0.6"
